# rust_aii_server

./: .gitignore  Cargo.toml  DockerCargoConfig  Dockerfile  README.md
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/token/src/: lib.rs
crates/utilities/: Cargo.toml
crates/utilities/src/: lib.rs
crates/wechat/: Cargo.toml
crates/wechat/src/: lib.rs
examples/: jwt_token.rs
src/: main.rs
src/api/: middlewares.rs  mod.rs  tags.rs  token.rs  user.rs
