[package]
name = "aii_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/token",
    "crates/database",
    "crates/utilities",
    "crates/wechat"
]

[dependencies]
rc-token = { path = "./crates/token" }
rc-database = { path = "./crates/database" }
rc-utilities = { path = "./crates/utilities" }
rc-wechat = { path = "./crates/wechat" }

serde_json = "1.0.73"
serde = { version = "1.0.132", features = ["derive"] }
tokio = { features = ["macros", "rt-multi-thread"] }
poem = { version = "1.3.51", features = [
    "rustls",
    "test",
    "anyhow",
] }
poem-openapi = { version = "2.0.23", features = [
    "rapidoc",
    "swagger-ui",
    "redoc",
    "chrono",
    "email",
    "static-files",
] }
sqlx = { version = "0.6.3", features = [
    "mysql",
    "runtime-tokio-rustls",
    "chrono",
    "json",
] }
dotenvy = "0.15.7"